@@ -53,8 +53,8 @@ function model.update_floor(floor_data, aggregate)
             end
             
             -- Update the main aggregate with the results
-            aggregate.energy_consumption = subfloor_aggregate.energy_consumption
-            aggregate.pollution = subfloor_aggregate.pollution
+            aggregate.energy_consumption = aggregate.energy_consumption + subfloor_aggregate.energy_consumption
+            aggregate.pollution = aggregate.pollution + subfloor_aggregate.pollution
 
             local function update_main_aggregate(class_name, destination_class_name)
                 for _, item in ipairs(structures.class.to_array(subfloor_aggregate[class_name])) do
